--- a/CONTACT/CONTACT.HTML
+++ b/CONTACT/CONTACT.HTML
@@ -10,6 +10,7 @@
     <a href="../SKILLS/SKILLS.HTML">SKILLS</a>
     <a href="../PROJECT/PROJECT.HTML">project</a>
     <a href="../table/table.html">table</a>
+    <a href="../index.html">index</a>
   
 
     
