--- a/HOMEPAGE/home.html
+++ b/HOMEPAGE/home.html
@@ -11,6 +11,7 @@
     <a href="../SKILLS/SKILLS.HTML">SKILLS</a>
     <a href="../CONTACT/CONTACT.HTML">contact</a>
     <a href="../table/table.html">table</a>
+    <a href="../index.html">index</a>
     
 </h1><hr>
     <h1>home page</h1><hr>
