--- a/SKILLS/SKILLS.HTML
+++ b/SKILLS/SKILLS.HTML
@@ -11,6 +11,7 @@
     <a href="../HOMEPAGE/home.html">home</a>
     <a href="../CONTACT/CONTACT.HTML">contact</a>
     <a href="../table/table.html">table</a>
+    <a href="../index.html">index</a>
 </h1><hr>
     <H1>MY SKILLS</H1><hr>
 
