--- a/table/table.html
+++ b/table/table.html
@@ -11,6 +11,7 @@
         <a href="../HOMEPAGE/home.html">home</a>
         <a href="../CONTACT/CONTACT.HTML">contact</a>
         <a href="../SKILLS/SKILLS.HTML">skills</a>
+        <a href="../index.html">index</a>
     </h1><hr>
     <table border="2" width="800" >
       <thead bgcolor="lightgreen">
