--- a/CONTACT/CONTACT.HTML
+++ b/CONTACT/CONTACT.HTML
@@ -8,7 +8,7 @@
 <body>
  <h1>   <a href="../HOMEPAGE/home.html">home</a>
     <a href="../SKILLS/SKILLS.HTML">SKILLS</a>
-    <a href="../PROJECT/PROJECT.HTML">project</a>
+    <a href="../PROJECT/PROJECT.HTML"> </a>
     <a href="../table/table.html">table</a>
     <a href="../index.html">index</a>
   
