--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <body>
     
     <h1>
-        <a href="../PROJECT/PROJECT.HTML">project</a>
-        <a href="../HOMEPAGE/home.html">home</a>
-        <a href="../CONTACT/CONTACT.HTML">contact</a>
-        <a href="../SKILLS/SKILLS.HTML">skills</a>
+        <a href="./CONTACT/CONTACT.HTML">contact</a>
+        <a href="HOMEPAGE/home.html">home</a>
+        <a href="PROJECT/PROJECT.HTML">project</a>
+        <a href="SKILLS/SKILLS.HTML">skills</a>
+
         <a href="./table/table.html">table</a>
     </h1><hr>
     <h1>index.page</h1>
