--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 
         <a href="./table/table.html">table</a>
     </h1><hr>
-    <h1>index.page</h1>
+    <h1>home page</h1>
 </body>
 </html>
