--- a/HOMEPAGE/home.html
+++ b/HOMEPAGE/home.html
@@ -12,7 +12,7 @@
     <a href="../CONTACT/CONTACT.HTML">contact</a>
     <a href="../table/table.html">table</a>
     <a href="../index.html">index</a>
-    
+    <a href="../form/form.html">form</a>
 </h1><hr>
     <h1>home page</h1><hr>
     <div><img src="../pictures/icons8-manager-50.png" alt="error"></div>
