--- a/PROJECT/PROJECT.HTML
+++ b/PROJECT/PROJECT.HTML
@@ -12,6 +12,7 @@
     <a href="../SKILLS/SKILLS.HTML">SKILLS</a>
     <a href="../CONTACT/CONTACT.HTML">contact</a>
     <a href="../table/table.html">table</a>
+    <a href="../form/form.html">form</a>
 </h1><hr>
     <H1>ABOUT MY PROJECT</H1><hr>
     <img src="../pictures/icons8-google-code-50.png" alt="error">
