--- a/SKILLS/SKILLS.HTML
+++ b/SKILLS/SKILLS.HTML
@@ -12,6 +12,7 @@
     <a href="../CONTACT/CONTACT.HTML">contact</a>
     <a href="../table/table.html">table</a>
     <a href="../index.html">index</a>
+    <a href="../form/form.html">form</a>
 </h1><hr>
     <H1>MY SKILLS</H1><hr>
 
