--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <a href="HOMEPAGE/home.html">home</a>
         <a href="PROJECT/PROJECT.HTML">project</a>
         <a href="SKILLS/SKILLS.HTML">skills</a>
-
-        <a href="./table/table.html">table</a>
+       <a href="./table/table.html">table</a>
+       <a href="../form/form.html">form</a>
     </h1><hr>
     <h1>home page</h1>
 </body>
