--- a/index.html
+++ b/index.html
@@ -17,4 +17,15 @@
     </h1><hr>
     <h1>home page</h1>
 </body>
+<style>
+     
+    a:hover{
+   background-color: aqua;
+
+}
+h1{
+   margin-left: 260px;
+  
+}
+</style>
 </html>
