--- a/form/form.html
+++ b/form/form.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>form</title>
 </head>
-<body bgcolor="gray"><table class="all" cellspacing="0" >
+<body bgcolor="gray">
+    <table class="all" cellspacing="0" >
     <tr>
     <td>
       <img id="image" src="./Group 1.png" alt="pic" height="200" width="700" > 
     </td>
-<td>  <form>
-    
-        <fieldset>
+    <td> 
+         <form>
+           <fieldset>
             <legend id="signup" >sign up</legend> <br>
             <label for="name">Name</label><br>
             <input type="text" id="name" placeholder="name here" size="60">
@@ -59,7 +60,7 @@
         margin: 0%;
     }
     body{
-        background-image:  url('file:///C:/Users/Kashif%20Afridi/Desktop/form-2/pexels-felix-mittermeier-956999.jpg');
+        background-image:  url('../form/pexels-felix-mittermeier-956999.jpg');
         background-size: cover;
     }
     
