--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="PROJECT/PROJECT.HTML">project</a>
         <a href="SKILLS/SKILLS.HTML">skills</a>
        <a href="./table/table.html">table</a>
-       <a href="../form/form.html">form</a>
+       <a href="./form/form.html">form</a>
     </h1><hr>
     <h1>home page</h1>
 </body>
