--- a/CONTACT/CONTACT.HTML
+++ b/CONTACT/CONTACT.HTML
@@ -3,24 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>contact</title>
 </head>
 <body>
+    <header>
  <h1>   <a href="../HOMEPAGE/home.html">home</a>
     <a href="../SKILLS/SKILLS.HTML">SKILLS</a>
     <a href="../PROJECT/PROJECT.HTML"> </a>
     <a href="../table/table.html">table</a>
     <a href="../index.html">index</a>
-    <a href="../form/form.html">form</a>
+    <a href="../form/signup.html">signup</a>
 
     
-</h1><hr>
+</h1>
+</header>
+<hr>
+<header>
     <H1 >MY CONTACT DETAILS</H1><hr>
+</header>
+<article>
+     <h2 id="name">my name KASHIF</h2><audio src="../audio/name audio .mp3" controls></audio>
   <p> <img src="../pictures/icons8-whatsapp-24.png" alt="error"> <H2>WHATSAPP</H2></p>
     <H3>3434554455</H3>
  <p><img src="../pictures/icons8-gmail-login-50.png" alt="error">  <H2>EMAIL</H2></p> 
     <H3>KKK@GMAIL.COM</H3>
     
+</article>
 </body>
 <style>
     /* h1{
@@ -43,6 +51,13 @@
     }
     a{
         margin-left: 50px ;
+    }
+    #name{
+         display: inline-block;
+         margin-right: 20px;
+    }
+    audio{
+         display: inline-block;
     }
 </style>
 </html>
