--- a/HOMEPAGE/home.html
+++ b/HOMEPAGE/home.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home page</title>
 </head>
-<body>
+<body><header>
     <h1>
     <a href="../PROJECT/PROJECT.HTML">project</a>
     <a href="../SKILLS/SKILLS.HTML">SKILLS</a>
     <a href="../CONTACT/CONTACT.HTML">contact</a>
     <a href="../table/table.html">table</a>
     <a href="../index.html">index</a>
-    <a href="../form/form.html">form</a>
-</h1><hr>
+    <a href="../form/signup.html">signup</a>
+</h1><hr></header>
     <h1>home page</h1><hr>
+ <article>
     <div><img src="../pictures/icons8-manager-50.png" alt="error"></div>
     <h2>About me</h2>
     <ul >
@@ -26,12 +27,16 @@
         <li>education: FSC</li>
     </h3>
     </ul>
+ </article>
+<article>
+
      <h2>CONTACT</h2>
     <ul>
       <h3>  <li>whtsapp: 34344434343</li>
         <li>email: KASHIF @GMAIL.COM</li>
     </h3>
     </ul>
+</article>
     <style>
      
          a:hover{
