--- a/SKILLS/SKILLS.HTML
+++ b/SKILLS/SKILLS.HTML
@@ -6,16 +6,18 @@
     <title>SKILLS PAGE</title>
 </head>
 <body>
+    <header>
     <h1>
     <a href="../PROJECT/PROJECT.HTML">project</a>
     <a href="../HOMEPAGE/home.html">home</a>
     <a href="../CONTACT/CONTACT.HTML">contact</a>
     <a href="../table/table.html">table</a>
     <a href="../index.html">index</a>
-    <a href="../form/form.html">form</a>
+    <a href="../form/signup.html">signup</a>
 </h1><hr>
+   </header>
     <H1>MY SKILLS</H1><hr>
-
+  <article>  
     <DL><img src="../pictures/icons8-html-48.png" alt="error">
         <H2> <DT>HTML</DT></H2>
         <DD> MY EXPERTISE IN HTML Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci accusamus nesciunt eaque nobis fugiat libero eum maxime, illum fugit fuga perferendis nam modi repellat nihil sunt consequatur. Iure voluptas dolore quisquam? Debitis repellendus aspernatur, iste recusandae esse incidunt fuga ratione atque doloremque aliquam ad, molestiae placeat nostrum quidem in rerum quod velit laboriosam. Non quis cumque praesentium, blanditiis iste doloremque explicabo distinctio labore nam voluptas, minima, vero est eveniet! Expedita similique, praesentium earum, dolorum vel error accusamus facere, rem laudantium nisi vitae! Labore iste alias, ipsa veritatis ratione ea magnam ducimus reprehenderit cupiditate quod doloribus animi doloremque repudiandae accusamus! Esse repellat provident, tenetur blanditiis veniam magnam ipsam maxime debitis neque sunt architecto quia facilis nisi, perferendis amet non doloribus consectetur, libero ab! Necessitatibus ipsa quod dolore repudiandae assumenda ad dolorum, in reiciendis totam nostrum corporis. Laboriosam dignissimos rerum totam quidem, dicta fuga nisi consectetur consequuntur ratione ut illum cumque repudiandae saepe repellat praesentium sed quibusdam? Dolorem rerum a omnis, laboriosam temporibus porro, consequatur modi blanditiis dolorum atque voluptatem voluptas incidunt iste accusamus sed velit, itaque nam! Nihil eligendi quos porro inventore? Molestias natus iusto nam iste deserunt doloremque quasi amet excepturi. Facilis ex vero placeat dolorum iusto, cupiditate aut impedit!</DD>
@@ -26,6 +28,7 @@
         <DD> FOR RESONSIVE Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus voluptate provident in, itaque et, fugit maxime iste natus eos velit explicabo unde ad sed expedita, ratione esse? Corporis, distinctio maxime ab dolorum repellat esse aliquam aliquid aperiam repellendus. Ratione consequuntur quibusdam dolores assumenda reprehenderit eius praesentium minus magnam. In facere officia voluptatum repellat, placeat perferendis nostrum autem laboriosam id quis numquam architecto laborum culpa veritatis commodi ducimus praesentium esse pariatur recusandae. Quasi libero eius sapiente quas dolorum officiis ducimus? Odit ex voluptate natus sequi suscipit quas dolor sunt et! Unde reprehenderit rem inventore assumenda facere, labore ratione odio magnam amet dolor! Aliquid nobis, eius porro perspiciatis odio iste voluptas veritatis reprehenderit non laborum excepturi, eligendi sapiente architecto, quasi deleniti corporis? Expedita, voluptatibus eveniet! Voluptate incidunt minus veritatis amet officiis quibusdam nam eum dicta explicabo quia veniam accusamus placeat ut, perferendis eveniet excepturi eaque deserunt aliquam, cum sequi quod corrupti necessitatibus, dolorum consectetur? Temporibus adipisci quo tempore corrupti, animi provident necessitatibus incidunt eum quod est doloribus. Molestias dolore assumenda voluptatibus a cumque, voluptas, ipsum unde excepturi praesentium tenetur ab consequuntur iusto. Voluptatum nisi harum voluptates quibusdam deserunt necessitatibus, eius cupiditate repellat officiis neque ipsum eos expedita provident corporis dicta temporibus asperiores!</DD>
 
     </DL>
+  </article>
     
 </body>
 <style>
