--- a/table/table.html
+++ b/table/table.html
@@ -6,14 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>
+   <header>
+     <h1>
         <a href="../PROJECT/PROJECT.HTML">project</a>
         <a href="../HOMEPAGE/home.html">home</a>
         <a href="../CONTACT/CONTACT.HTML">contact</a>
         <a href="../SKILLS/SKILLS.HTML">skills</a>
         <a href="../index.html">index</a>
-    </h1><hr>
-    <table border="2" width="800" >
+        <a href="../form/signup.html">signup</a>
+     </h1><hr>
+   </header>
+    <article>
+     <table border="2" width="800" >
       <thead bgcolor="lightgreen">
         <tr>
         <th>Rollno</th>
@@ -65,7 +69,7 @@
 
     </table>
 
-
+   </article>
 
 
 
