--- a/CONTACT/CONTACT.HTML
+++ b/CONTACT/CONTACT.HTML
@@ -6,7 +6,7 @@
     <title>contact</title>
 </head>
 <body>
-    <header>
+    <nav>
  <h1>   <a href="../HOMEPAGE/home.html">home</a>
     <a href="../SKILLS/SKILLS.HTML">SKILLS</a>
     <a href="../PROJECT/PROJECT.HTML"> </a>
@@ -16,7 +16,7 @@
 
     
 </h1>
-</header>
+</nav>
 <hr>
 <header>
     <H1 >MY CONTACT DETAILS</H1><hr>
