--- a/HOMEPAGE/home.html
+++ b/HOMEPAGE/home.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home page</title>
 </head>
-<body><header>
+<body>
+    <nav>
     <h1>
     <a href="../PROJECT/PROJECT.HTML">project</a>
     <a href="../SKILLS/SKILLS.HTML">SKILLS</a>
@@ -13,7 +14,8 @@
     <a href="../table/table.html">table</a>
     <a href="../index.html">index</a>
     <a href="../form/signup.html">signup</a>
-</h1><hr></header>
+</h1><hr>
+</nav>
     <h1>home page</h1><hr>
  <article>
     <div><img src="../pictures/icons8-manager-50.png" alt="error"></div>
