--- a/PROJECT/PROJECT.HTML
+++ b/PROJECT/PROJECT.HTML
@@ -7,7 +7,7 @@
 
 </head>
 <body>
- <header>
+ <nav>
     <h1>
     <a href="../HOMEPAGE/home.html">home</a>
     <a href="../SKILLS/SKILLS.HTML">SKILLS</a>
@@ -15,7 +15,7 @@
     <a href="../table/table.html">table</a>
     <a href="../form/signup.html">signup</a>
    </h1><hr>
- </header>
+  </nav>
     <H1>ABOUT MY PROJECT</H1><hr>
   <article>  
     <video src="../video/video1.mp4 " controls autoplay loop  width="400" height="200"></video><br>
