--- a/SKILLS/SKILLS.HTML
+++ b/SKILLS/SKILLS.HTML
@@ -6,7 +6,7 @@
     <title>SKILLS PAGE</title>
 </head>
 <body>
-    <header>
+    <nav>
     <h1>
     <a href="../PROJECT/PROJECT.HTML">project</a>
     <a href="../HOMEPAGE/home.html">home</a>
@@ -15,7 +15,7 @@
     <a href="../index.html">index</a>
     <a href="../form/signup.html">signup</a>
 </h1><hr>
-   </header>
+</nav>
     <H1>MY SKILLS</H1><hr>
   <article>  
     <DL><img src="../pictures/icons8-html-48.png" alt="error">
