--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>index</title>
 </head>
 <body>
-    <header>
+    <nav>
     <h1>
         <a href="./CONTACT/CONTACT.HTML">contact</a>
         <a href="HOMEPAGE/home.html">home</a>
@@ -15,7 +15,7 @@
        <a href="./table/table.html">table</a>
        <a href="./form/signup.html">signup</a>
     </h1><hr>
- </header>
+</nav>
     <h1>home page</h1>
     
 </body>
