--- a/table/table.html
+++ b/table/table.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-   <header>
+   <nav>
      <h1>
         <a href="../PROJECT/PROJECT.HTML">project</a>
         <a href="../HOMEPAGE/home.html">home</a>
@@ -15,7 +15,7 @@
         <a href="../index.html">index</a>
         <a href="../form/signup.html">signup</a>
      </h1><hr>
-   </header>
+   </nav>
     <article>
      <table border="2" width="800" >
       <thead bgcolor="lightgreen">
