--- a/CONTACT/CONTACT.HTML
+++ b/CONTACT/CONTACT.HTML
@@ -21,14 +21,20 @@
 <header>
     <H1 >MY CONTACT DETAILS</H1><hr>
 </header>
+
 <article>
      <h2 id="name">my name KASHIF</h2><audio src="../audio/name audio .mp3" controls></audio>
+     <section></section>
   <p> <img src="../pictures/icons8-whatsapp-24.png" alt="error"> <H2>WHATSAPP</H2></p>
     <H3>3434554455</H3>
  <p><img src="../pictures/icons8-gmail-login-50.png" alt="error">  <H2>EMAIL</H2></p> 
     <H3>KKK@GMAIL.COM</H3>
     
 </article>
+<section>
+    <h2>my location</h2>
+    <iframe  src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d52918.93087904631!2d71.54702874999997!3d34.007090200000015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1ssaylani%20peshawar!5e0!3m2!1sen!2s!4v1710546919930!5m2!1sen!2s" width="400" height="300" style="border:0;"  referrerpolicy="no-referrer-when-downgrade"></iframe>
+</section>
 </body>
 <style>
     /* h1{
@@ -58,6 +64,9 @@
     }
     audio{
          display: inline-block;
+    }
+    section{
+        margin-left: 250px;
     }
 </style>
 </html>
