--- a/SKILLS/SKILLS.HTML
+++ b/SKILLS/SKILLS.HTML
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SKILLS PAGE</title>
+    <link rel="stylesheet" href="./skillstyle.css">
 </head>
 <body>
     <nav>
@@ -31,17 +32,5 @@
   </article>
     
 </body>
-<style>
-    h1{
-      margin-left: 260px;  
-    }
-    a{
-        margin-left: 50px ;
-    }
-     a:hover{
-        background-color: aqua;
-        
 
-    }
-</style>
 </html>
