--- a/CONTACT/CONTACT.HTML
+++ b/CONTACT/CONTACT.HTML
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact</title>
+    <link rel="stylesheet" href="./contactstyle.css">
 </head>
 <body>
     <nav>
@@ -36,37 +37,5 @@
     <iframe  src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d52918.93087904631!2d71.54702874999997!3d34.007090200000015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1ssaylani%20peshawar!5e0!3m2!1sen!2s!4v1710546919930!5m2!1sen!2s" width="400" height="300" style="border:0;"  referrerpolicy="no-referrer-when-downgrade"></iframe>
 </section>
 </body>
-<style>
-    /* h1{
 
-        margin:260px;
-        
-    } */
-    h1{
-        margin-left: 260px;
-    }
-    h2,h3{
-        margin-left: 90px;
-    }
-    h2{
-        margin-top: 40px;
-    }
-    a:hover{
-        background-color: aqua;
-
-    }
-    a{
-        margin-left: 50px ;
-    }
-    #name{
-         display: inline-block;
-         margin-right: 20px;
-    }
-    audio{
-         display: inline-block;
-    }
-    section{
-        margin-left: 250px;
-    }
-</style>
 </html>
