--- a/HOMEPAGE/home.html
+++ b/HOMEPAGE/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home page</title>
+    <link rel="stylesheet" href="./home.css">
 </head>
 <body>
     <nav>
@@ -39,16 +40,6 @@
     </h3>
     </ul>
 </article>
-    <style>
-     
-         a:hover{
-        background-color: aqua;
 
-    }
-    h1{
-        margin-left: 260px;
-       
-    }
-    </style>
 </body>
 </html>
