--- a/PROJECT/PROJECT.HTML
+++ b/PROJECT/PROJECT.HTML
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PROJECT PAGE</title>
-
+  <link rel="stylesheet" href="./projectstyle.css">
 </head>
 <body>
  <nav>
@@ -31,16 +31,5 @@
 </article>
     
 </body>
-<style>
-     a:hover{
-        background-color: aqua;
 
-    }
-    a{
-        margin-left: 50px ;
-    }
-    h1{
-        margin-left: 260px;
-    }
-</style>
 </html>
