--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
+    <link rel="stylesheet" href="./indestyle.css">
 </head>
 <body>
     <nav>
@@ -19,15 +20,5 @@
     <h1>home page</h1>
     
 </body>
-<style>
-     
-    a:hover{
-   background-color: aqua;
 
-}
-h1{
-   margin-left: 260px;
-  
-}
-</style>
 </html>
